--- a/Topics/topics.css
+++ b/Topics/topics.css
@@ -1,3 +1,14 @@
-h1 { text-align: center;
-    font-family: sans-serif; 
-}
+  body {
+            font-family: Arial, sans-serif;
+            font-size: 20px;
+            line-height: 1.6;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        #dataContainer {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
