--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,38 @@
-h1 {
-    text-align: center;
-    font-family: "Source Sans Pro", sans-serif;
-    font-weight: normal;
-}
-p {
-    text-align: center;
-}
- body {
-    font-family: Arial, sans-serif;
-     display: flex;
-    flex-direction: column;
-    min-height: 100vh;
- }
- header {
-    background-color: #f8f9fa;
-    padding: 20px;
-    text-align: center;
-}
-  main {
-    margin: 20px;
-      flex: 1;
-}
-  footer {
-    background-color: #f8f9fa;
-     padding: 20px;
-     text-align: center;
-}
-
-
-
+	body {
+  			background-image: url('https://media.istockphoto.com/id/518275718/vector/seamless-vector-pattern-of-the-tourist-icons.jpg?s=612x612&w=0&k=20&c=WCuqkIPgKSkJhS98KmtMB4FGOwpyM16GbJu6SptoNLc=');
+		}
+        header {
+            background-color: #B8C66C;
+            padding: 20px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        h1:hover {
+            cursor: pointer;
+        }
+        section {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+        }
+        ul.list-group {
+            list-style-type: none;
+            padding: 0;
+            margin: 0; /* Added to remove default margin */
+        }
+        .list-group-item {
+            border: none;
+            padding: 10px 0;
+            border-bottom: 1px solid #ddd;
+        }
+        .list-group-item:last-child {
+            border-bottom: none;
+        }
+        a {
+            text-decoration: none;
+            color: #4CAF50;
+            transition: color 0.3s ease;
+        }
+        a:hover {
+            color: #2E8B57;
+        }
