--- a/Topics/topics.css
+++ b/Topics/topics.css
@@ -11,6 +11,9 @@
             border-radius: 5px;
             margin-bottom: 20px;
         }
+	body{
+	    background-color: lightblue;
+	}
 	section {
             background-color: #fff;
             padding: 20px;
